AM_CPPFLAGS = $(global_CFLAGS) $(MIST_CFLAGS)
LDADD = $(MIST_LIBS)
bin_PROGRAMS=MistAnalyserRTMP MistAnalyserFLV MistAnalyserDTSC MistAnalyserAMF
MistAnalyserRTMP_SOURCES=rtmp_analyser.cpp
MistAnalyserFLV_SOURCES=flv_analyser.cpp
MistAnalyserDTSC_SOURCES=dtsc_analyser.cpp
MistAnalyserAMF_SOURCES=amf_analyser.cpp
