
executables += {
  'name': 'MistController', 
  'sources' : [
    files( 'controller.cpp',
           'controller_updater.cpp',
           'controller_streams.cpp',
           'controller_storage.cpp',
           'controller_connectors.cpp',
           'controller_statistics.cpp',
           'controller_limits.cpp',
           'controller_capabilities.cpp',
           'controller_uplink.cpp',
           'controller_api.cpp',
           'controller_push.cpp'),
    header_tgts,
    server_html],
  'defines': [],
  'deps' : [libmist_dep]
}

